# claude-managed-agents

./: .env.example  .gitignore  Makefile  README.md  compare_approaches.py  pyproject.toml
.github/workflows/: ci.yml
blog/: claude-managed-agents.md
examples/01_agent_sdk/: README.md  audit_agent.py  sample_output.md
examples/02_markdown_definitions/: README.md  sample_output.md  security-auditor.md
examples/03_agent_teams/: README.md  requirements.txt  sample_output.md  team_audit.py
examples/04_managed_agents/: README.md  audit_agent.py  sample_output.md
sample_target/: app.py
