[project]
name = "claude-managed-agents"
version = "1.0.0"
description = "Four ways to build AI agents with Claude — Agent SDK, Markdown Definitions, Agent Teams, and Managed Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Cobus Greyling" }]

dependencies = [
    "anthropic>=0.52.0",
]

[project.optional-dependencies]
teams = [
    "claude-agent-sdk>=0.1.0",
]
target = [
    "flask>=3.0",
]
dev = [
    "ruff>=0.4.0",
]
all = [
    "claude-managed-agents[teams,target,dev]",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
